<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp">

    <TextView
        android:id="@+id/add_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_notes_caps"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_notes"
        android:src="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/orange" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/orange_border"
        android:fontFamily="sans-serif-black"
        android:hint="@string/please_enter_title"
        android:maxLines="2"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/add_notes" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/orange_border"
        android:fontFamily="sans-serif-medium"
        android:gravity="top"
        android:hint="@string/please_enter_content"
        android:inputType="textMultiLine|textCapSentences"
        android:isScrollContainer="true"
        android:maxHeight="300dp"
        android:maxLines="25"
        android:minHeight="100dp"
        android:minLines="5"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-black"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_content" />


</androidx.constraintlayout.widget.ConstraintLayout>